# multiagent-rag-system

./: .env.example  .gitignore  Caddyfile  Makefile  README.md  Readme.md  docker-compose.dev.yml  docker-compose.prod.yml  loki-config.yaml  otel-collector-config.yaml  pyproject.toml  tempo-config.yaml
.github/workflows/: hetzner-deploy.yml
anki/: anki.Dockerfile  ankiProd.Dockerfile  entrypoint.sh  supervisord.conf
backend/: README.md  alembic.ini  dev.Dockerfile  prod.Dockerfile  pyproject.toml
backend/chroma/: chroma.sqlite3
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260328_1841_e9c879f376c2_initial_schema.py
backend/scripts/: __init__.py  reset_vector_db.py
backend/server/: __init__.py  main.py
backend/server/anki/: sse_connection.py
backend/server/chroma/: chroma.sqlite3
backend/server/controller/: chat_controller.py  embedding_controller.py  flashcards_controller.py
backend/server/core/: config.py  firebase.py  logger.py  otel.py  security.py  setup.py
backend/server/db/: config.py  database.py  pubsub.py  session.py
backend/server/db/dtos/: epub_dto.py  session_dto.py
backend/server/db/vectordb/: embdeddings.py  embeddings.py  vectordb.py
backend/server/models/: area.py  document.py  flashcard.py  links.py  session.py  user.py
backend/server/routers/: areas.py  auth.py  chat.py  documents.py  flashcards.py  sse_router.py
backend/server/routers/v1/: chat.py  endpoints.py
backend/server/service/: chat_history_service.py  embedding_service.py  supervisor_server_service.py
backend/server/service/anki/: anki_service.py  config.py  errors.py
backend/server/service/embedding/: embedding_service.py  epub_processing_service.py  firebase_file_downloader.py
backend/server/service/sessionmanager/: session_manager.py
backend/statemachine/: __init__.py  main.py
backend/statemachine/agents/analysis/: knowledge_identification_agent.py  summarizer_agent.py  templates.py
backend/statemachine/agents/flashcards/: flashcard_agent.py  flashcard_agents.py  flashcard_state.py  templates.py
backend/statemachine/agents/rag/: grade_documents.py  rag_agent.py  rag_agent_history.py  retriever.py  state.py  templates.py
backend/statemachine/agents/summarizer/: summarizer_agent.py
backend/statemachine/agents/supervisor/: knowledge_gap_agent.py  supervisor.py  supervisor_state.py  supervisor_testing.py  templates.py
backend/statemachine/agents/web_research/: web_research_state.py
backend/statemachine/agents/web_search/: web_search_agent.py  web_search_state.py
backend/statemachine/core/: flashcard_graph.py  workflow.py
backend/statemachine/db/: client.py  pg_config.py
backend/statemachine/db/chroma/: chroma.sqlite3
backend/statemachine/dtos/: chat_dto.py  embedding_dto.py  epub_dto.py  flashcard_dto.py
backend/statemachine/embeddings/: embedding.py  model.py  retriever.py  utils.py
backend/statemachine/model/: config.py
backend/statemachine/models/: document_chunk.py  epub.py
backend/statemachine/services/: chat_service.py  document_chunks_service.py  epub_service.py
backend/statemachine/tools/: create_flashcard.py  scrape_webpages.py
backend/tools/: env.py
backend/tools/epub_parser/: main.py  parser.py
backend/tools/epub_parser/data/: go-cookbook.epub  mastering-go.epub
backend/tools/epub_parser/utils/: chapter_extractor.py  file.py  inspector.py  logging.py  toc.py
frontend/: .eslintignore  .eslintrc.json  .gitignore  components.json  cors.json  dev.Dockerfile  instrumentation.ts  next.config.mjs  otel-collector-config.yaml  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  prod.Dockerfile  tailwind.config.ts  tsconfig.json
frontend/mock/: mockChapters.ts  mockData.ts
frontend/src/: instrumentation.node.ts  instrumentation.ts  (+1 more)
(+83 files in other folders)
