[tool.poetry]
name = "multiagent-rag-system"
version = "0.1.0"
description = "A multiagent system to aid in learning programming languages and other tech"
authors = ["Jaka Krajnc <444.ous@gmail.com>"]
readme = "README.md"
packages = [
    { include = "server" },
    { include = "statemachine" },
    { include = "tools" },
]

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
pydantic-settings = "^2.6.0"
fastapi = { version = "^0.115.0", extras = ["standard"] }

[tool.isort]
profile = "black"

[tool.poetry.group.server.dependencies]
pytest = "^8.3.2"
websockets = "^13.0"
sqlmodel = "^0.0.22"
psycopg = "^3.2.1"
pyjwt = "^2.9.0"
greenlet = "^3.1.1"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
sqlalchemy = "2.0.35"
anyio = "^4.6.2.post1"
opentelemetry-instrumentation-fastapi = "^0.50b0"
opentelemetry-instrumentation-requests = "^0.50b0"
opentelemetry-instrumentation-sqlalchemy = "^0.50b0"
firebase-admin = "^6.6.0"


[tool.poetry.group.statemachine.dependencies]
langchain = "^0.3.14"
langgraph = "^0.2.64"
langchain-openai = "^0.2.9"
langchain-community = "^0.3.8"
langchain-chroma = "0.2.3"
orjson = "3.10.14"
chromadb = "0.6.3"
psycopg = "^3.2.4"
psycopg-pool = "^3.2.2"

[tool.poetry.group.tools.dependencies]
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

